tests/examples/bad/invalid_increment.lat
int main() {
    boolean[] arr;
    arr[0]--;
    return 1;
}